<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:scrollbars="none"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/select_level_icon_layout"
        android:layout_marginBottom="30dp"
        android:background="@drawable/select_level_header"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_margin="30dp"
        android:id="@+id/board"
        android:layout_below="@+id/select_level_icon_layout"
        android:background="@drawable/level_board_holder">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:id="@+id/rel"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:id="@+id/rell"
                    android:layout_centerVertical="true">


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:id="@+id/game_progress_holder"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/background_for_progress_holder">
                    <ProgressBar
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/game_progress"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:progressDrawable="@drawable/progress_background"/>
                    </RelativeLayout>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="TODO"
                        android:src="@drawable/trophy"
                        android:layout_marginStart="220dp"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10%"
                    android:textSize="15sp"
                    android:id="@+id/progress_text"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>


        </RelativeLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           android:layout_below="@id/rel">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            android:id="@+id/card_level_1"
            app:cardBackgroundColor="@color/primary"
            android:layout_marginTop="25dp">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:id="@+id/r1"
                   android:background="@drawable/game_level_item_holder_active"
                   android:padding="10dp">


                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <ImageView
                           android:layout_width="50dp"
                           android:layout_height="50dp"
                           android:src="@drawable/coins_in_container"
                           android:contentDescription="TODO"
                           android:id="@+id/coin"/>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_toEndOf="@+id/coin"
                           android:textSize="20sp"
                           android:text="Level 1"
                           android:textStyle="bold"
                           android:id="@+id/level_1"
                           android:layout_marginStart="8dp"
                           android:textColor="#8B280C"/>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="(Earn 500 coins)"
                           android:layout_toEndOf="@id/coin"
                           android:layout_below="@id/level_1"
                           android:layout_marginStart="8dp"
                           android:textColor="#E57700"
                           android:textSize="11sp"/>

                       <LinearLayout
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentEnd="true"
                           android:layout_centerVertical="true"
                           android:orientation="horizontal">

                           <ImageView
                               android:layout_width="40dp"
                               android:layout_height="50dp"
                               android:contentDescription="TODO"
                               android:src="@drawable/level_line"/>

                           <ImageView
                               android:layout_width="80dp"
                               android:layout_height="50dp"
                               android:id="@+id/play_level_1"
                               android:layout_marginEnd="5dp"
                               android:contentDescription="TODO"
                               android:src="@drawable/play_button"/>
                       </LinearLayout>

                   </RelativeLayout>
           </RelativeLayout>
        </androidx.cardview.widget.CardView>


           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardCornerRadius="12dp"
               android:id="@+id/card_level_2"
               app:cardBackgroundColor="#F1F1E9"
               android:layout_marginTop="20dp">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:id="@+id/r2"
                   android:background="@drawable/game_level_item_holder_not_active"
                   android:padding="10dp">


                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <ImageView
                           android:layout_width="50dp"
                           android:layout_height="50dp"
                           android:src="@drawable/coins_in_container"
                           android:contentDescription="@string/cin_image_for_level_2"
                           android:id="@+id/coin2"/>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_toEndOf="@+id/coin2"
                           android:textSize="20sp"
                           android:text="@string/level_2"
                           android:textStyle="bold"
                           android:id="@+id/level_2"
                           android:layout_marginStart="8dp"
                           android:textColor="#8B280C"/>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/earn_4000_coins"
                           android:layout_toEndOf="@id/coin2"
                           android:layout_below="@id/level_2"
                           android:layout_marginStart="8dp"
                           android:textColor="#E57700"
                           android:textSize="11sp"/>

                       <LinearLayout
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentEnd="true"
                           android:layout_centerVertical="true"
                           android:orientation="horizontal">

                           <ImageView
                               android:layout_width="40dp"
                               android:layout_height="50dp"
                               android:contentDescription="@string/line_demacator_before_play_button"
                               android:src="@drawable/level_line"/>

                           <ImageView
                               android:layout_width="80dp"
                               android:layout_height="50dp"
                               android:id="@+id/play_level_2"
                               android:layout_marginEnd="5dp"
                               android:contentDescription="@string/play_button"
                               android:src="@drawable/play_button"/>
                       </LinearLayout>

                   </RelativeLayout>
               </RelativeLayout>
           </androidx.cardview.widget.CardView>



           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/card_level_3"
               app:cardBackgroundColor="#F1F1E9"
               android:layout_marginTop="20dp">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:id="@+id/r3"
                   android:background="@drawable/game_level_item_holder_not_active"
                   android:padding="10dp">


                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <ImageView
                           android:layout_width="50dp"
                           android:layout_height="50dp"
                           android:src="@drawable/coins_in_container"
                           android:contentDescription="@string/coin_image_for_level_3"
                           android:id="@+id/coin3"/>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_toEndOf="@+id/coin3"
                           android:textSize="20sp"
                           android:text="@string/level_3"
                           android:textStyle="bold"
                           android:id="@+id/level_3"
                           android:layout_marginStart="8dp"
                           android:textColor="#8B280C"/>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/earn_4000_coins"
                           android:layout_toEndOf="@id/coin3"
                           android:layout_below="@id/level_3"
                           android:layout_marginStart="8dp"
                           android:textColor="#E57700"
                           android:textSize="11sp"/>

                       <LinearLayout
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentEnd="true"
                           android:layout_centerVertical="true"
                           android:orientation="horizontal">

                           <ImageView
                               android:layout_width="40dp"
                               android:layout_height="50dp"
                               android:contentDescription="@string/line_demacator_before_play_button"
                               android:src="@drawable/level_line"/>

                           <ImageView
                               android:layout_width="80dp"
                               android:layout_height="50dp"
                               android:id="@+id/play_level_3"
                               android:layout_marginEnd="5dp"
                               android:contentDescription="@string/play_button"
                               android:src="@drawable/play_button"/>
                       </LinearLayout>

                   </RelativeLayout>
               </RelativeLayout>
           </androidx.cardview.widget.CardView>





       </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:id="@+id/female"
            android:src="@drawable/female_cartoon"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:id="@+id/male"
            android:layout_alignParentEnd="true"
            android:src="@drawable/male_cartoon"/>

    </RelativeLayout>

    </RelativeLayout>

</ScrollView>